fix: fixed duplicate work item on referenced merge
Refs: #385